<?xml version="1.0"?>
<package>
  <name>v4r_ros_wrappers</name>
  <version>0.1.4</version>
  <description>The v4r_ros_wrappers package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/v4r_ros_wrappers</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>camera_tracker</run_depend>
  <run_depend>camera_srv_definitions</run_depend>
  <run_depend>classifier_srv_definitions</run_depend>
  <run_depend>multiview_object_recognizer</run_depend>
  <run_depend>object_classifier</run_depend>
  <run_depend>object_perception_msgs</run_depend>
  <run_depend>recognition_srv_definitions</run_depend>
  <run_depend>segmentation</run_depend>
  <run_depend>segmentation_srv_definitions</run_depend>
  <run_depend>singleview_object_recognizer</run_depend>
  <run_depend>segment_and_classify</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
	<metapackage/>
  </export>
</package>
